Got rid of standard maths library as a dependency

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@ ALL_SRC_FILES = tests.c $(SRC_FILES)
 CFLAGS = $(INCLUDES) $(DEFINITIONS) -fstack-protector-all -Wstrict-overflow \
 	-Wformat=2 -Wformat-security -Wall -Wextra -g3 -O3 -Werror
 COVERAGE_FLAGS = -fprofile-arcs -ftest-coverage 
-LFLAGS = -lm -lpthread
+LFLAGS = -lpthread
 
 build:
 	gcc $(CFLAGS) $(ALL_SRC_FILES) -o tests $(LFLAGS)
